Correcting tests and filling in the table